form action updated

--- a/a2/login.html
+++ b/a2/login.html
@@ -66,7 +66,7 @@
     </div>
 -->
     <div class="loginformbox">
-    <form method="post" action="" id="customer_login" accept-charset="UTF-8" onsubmit="validateForm()">
+    <form method="post" action="https://titan.csit.rmit.edu.au/~e54061/wp/processing.php" id="customer_login" accept-charset="UTF-8" onsubmit="validateForm()">
         <input type="hidden" name="form_type" value="customer_login">
         <input type="hidden" name="utf8" value="✓">
 
