-1 and error message added to js

--- a/a2/index.html
+++ b/a2/index.html
@@ -29,12 +29,14 @@
         </div>
     </header>
 
+<!--
     <div id="handcrafted">
         <h2>Handcrafted Jewles, Belts and Buckles. </h2>
     </div>
+-->
 
     <div class="nav_bar">
-        <ul>
+        <ul id="navul">
             <li><a href="index.html">HOME</a></li>
             <li><a href="product.html">STORE</a></li>
             <li><a href="lookbook.html">SS'19</a></li>
