--- a/a2/products_chainnecklace.html
+++ b/a2/products_chainnecklace.html
@@ -75,6 +75,7 @@
 
     <div>
         <p>QTY</p>
+        <p id="inputerror"></p>
         <input name="qnt_1" type="text" id="qnt_1" value="0" size="3" data-price="60" onkeyup="CalculateItemsValue()" /><br>
 
         <br>
