--- a/a2/products_pearlloopearrings.html
+++ b/a2/products_pearlloopearrings.html
@@ -71,10 +71,12 @@
 
     <div>
         <p>QTY</p>
+        <p id="inputerror"></p>
         <input name="qnt_1" type="text" id="qnt_1" value="0" size="3" data-price="30" onkeyup="CalculateItemsValue()" /><br>
 
         <br>
         <p>TOTAL</p>
+        <p id="inputerror"></p>
 
         <div id="ItemsTotal">$0</div><br>
 
