--- a/a2/products_bucklebelt.html
+++ b/a2/products_bucklebelt.html
@@ -79,6 +79,7 @@
 
     <div>
         <p>QTY</p>
+        <p id="inputerror"></p>
         <input name="qnt_1" type="text" id="qnt_1" value="0" size="3" data-price="120" onkeyup="CalculateItemsValue()" /><br>
 
         <br>
